Stored Procedure with APIs and use Ajax
use Stored Procedure in DB call Ajax by calling APIs

--- a/School/School.vbproj
+++ b/School/School.vbproj
@@ -94,9 +94,26 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="apis.aspx" />
+    <Content Include="css\ui-darkness\images\ui-bg_glass_20_555555_1x400.png" />
+    <Content Include="css\ui-darkness\images\ui-bg_glass_40_0078a3_1x400.png" />
+    <Content Include="css\ui-darkness\images\ui-bg_glass_40_ffc73d_1x400.png" />
+    <Content Include="css\ui-darkness\images\ui-bg_gloss-wave_25_333333_500x100.png" />
+    <Content Include="css\ui-darkness\images\ui-bg_highlight-soft_80_eeeeee_1x100.png" />
+    <Content Include="css\ui-darkness\images\ui-bg_inset-soft_25_000000_1x100.png" />
+    <Content Include="css\ui-darkness\images\ui-bg_inset-soft_30_f58400_1x100.png" />
+    <Content Include="css\ui-darkness\images\ui-icons_222222_256x240.png" />
+    <Content Include="css\ui-darkness\images\ui-icons_4b8e0b_256x240.png" />
+    <Content Include="css\ui-darkness\images\ui-icons_a83300_256x240.png" />
+    <Content Include="css\ui-darkness\images\ui-icons_cccccc_256x240.png" />
+    <Content Include="css\ui-darkness\images\ui-icons_ffffff_256x240.png" />
+    <Content Include="css\ui-darkness\jquery-ui-1.9.2.custom.css" />
+    <Content Include="css\ui-darkness\jquery-ui-1.9.2.custom.min.css" />
     <Content Include="dispalyRecord.aspx" />
     <Content Include="Global.asax" />
     <Content Include="insertData.aspx" />
+    <Content Include="js\jquery-1.8.3.js" />
+    <Content Include="js\jquery-ui-1.9.2.custom.js" />
+    <Content Include="js\jquery-ui-1.9.2.custom.min.js" />
     <Content Include="showRecordTable.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
